# katas

./: .eslintrc  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Gemfile  Katas.sln  MANIFEST.in  README.md  app.scripts.json  appveyor.yml  behave.ini  bower.json  build.gradle  build.sbt  gradlew  gradlew.bat  gulpfile.js  index.html  license.txt  mix.exs  package.json  pavement.py  pom.xml  requirements.txt  settings.gradle  setup.cfg  setup.py  setuptools_behave.py
Katas.BinaryGap/: BinaryGap.cs  Katas.BinaryGap.csproj  TestsBinaryGap.cs
Katas.BinaryGap/Properties/: AssemblyInfo.cs
Katas.Equi/: EquiKata.csproj  Katas.Equi.csproj  TestEqui.cs
Katas.Equi/Properties/: AssemblyInfo.cs
config/: config.exs
features/: bearandsteadygene.feature  binarygap.feature  calculator.feature  environment.py  equi.feature  labyrinth.feature  ninjafight.feature
features/steps/: bearandsteadygene.py  binarygap.py  calculator.py  equi.py  labyrinth.py  ninjafight.py  step_bearandsteadygene.py  step_binarygap.py  step_calculator.py  step_equi.py  step_labyrinth.py  step_ninjafight.py  testutil.py
gradle/wrapper/: gradle-wrapper.properties
howto/: README.md
lib/: fizzbuzz.rb  lcd_digits.ex  rpn.ex  sudoku_validator.rb
list/AStar/: README.md
list/BankOCR/: README.md
project/: plugins.sbt
spec/: FizbuzzSpec.js  fizzbuzz_spec.rb  sudoku_validator_spec.rb
src/: Fizzbuzz.js
test/: SharedAssemblyInfo.cs  lcd_digits_test.exs  rpn_test.exs
tests/: FizzBuzz.cpp  katas_test.h  main.cpp
vs/: katas-cpp.sln  katas-cpp.vcxproj  katas-cpp.vcxproj.filters
(+170 files in other folders)
